2009-06-03  Dan Bernstein  <mitz@apple.com>

        - build fix

        * WebView/WebHTMLView.mm:

2009-06-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson.

        - build fix

        * WebView/WebHTMLView.mm:
        * WebView/WebView.mm:

2009-06-02  Darin Adler  <darin@apple.com>

        Reviewed by David Hyatt.

        Bug 26112: viewless WebKit -- make events work
        https://bugs.webkit.org/show_bug.cgi?id=26112

        One change here is to make the -[WebFrame frameView] function assert if ever called
        in viewless mode, and fix many callers that would trip that assertion.

        A major change is to put some methods and data in WebView that are currently in
        WebHTMLView, used only in viewless mode. A next step will be to use the WebView
        methods whenever possible, even when not in the viewless mode.

        Also fix FrameView to do normal reference counting instead of a strange model with
        an explicit deref near creation time.

        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::scrollRectIntoView): Add code to start in the appropriate place
        when dealing with viewless mode. This gets triggered when visiting the Google home page.
        (WebChromeClient::setToolTip): Changed to call WebView instead of WebHTMLView.
        (WebChromeClient::print): Changed to use a new selector that doesn't require a
        WebFrameView if present. Also don't even try to use the old selector in viewless mode.

        * WebCoreSupport/WebEditorClient.mm:
        (WebEditorClient::respondToChangedSelection): Changed to call WebView instead of WebHTMLView.

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::transitionToCommittedForNewPage): Added more code paths for
        viewless mode to skip things we can't do in that mode, with appropriate FIXME.
        Use Frame::create and RefPtr and eliminate the strange reference counting of FrameView.
